css/nav.css
header {
  margin: auto auto;
  display: flex;
  max-width: 1170px;
  align-items: center;
  width: 100%;
  padding: 26px 0;
  background: var(--white);
  align-content: center;
  position: relative;
}

.brand,
.navigation {
  flex: 1;
}

.brand a {
  padding-bottom: 0;
}

.navigation {
  position: relative;
}

.menu-list {
  display: flex;
  justify-content: flex-end;
  list-style: none;
}

.burger {
  display: none;
  position: absolute;
  right: 0;
  top: 0;
  height: 40px;
  width: 35px;
  cursor: pointer;
}

.burgerIcon {
  width: 35px;
  height: 3px;
  background: #212121;
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
  transition: 0.25s ease-in-out;
}

.burgerIcon:before,
.burgerIcon:after {
  content: '';
  position: absolute;
  width: 35px;
  height: 3px;
  background: rgba(33, 33, 33, 1);
  transition: 0.25s ease-in-out;
}

.burgerIcon:before {
  top: -10px;
}

.burgerIcon:after {
  top: 10px;
}

.burger.active .burgerIcon {
  background: rgba(33, 33, 33, 0);
}

.burger.active .burgerIcon:before {
  top: 0;
  transform: rotate(45deg);
}

.burger.active .burgerIcon:after {
  top: 0;
  transform: rotate(135deg);
}

header ul li {
  margin-right: 12px;
}

.nav-item-active {
  color: var(--darkNavy);
  font-weight: bold;
}

.menu-list li:last-child a {
  margin-right: 0;
  background: var(--secondary);
  border-radius: 2px;
  font-size: 12px;
  letter-spacing: 1.5px;
  text-transform: uppercase;
  color: var(--white);
  font-weight: bold;
  transition: 0.1s all ease-in;
}

.menu-list li:last-child a:hover {
  background: var(--secondaryDark);
  color: var(--white);
}

@media only screen and (max-width: 660px) {
  header {
    flex-direction: column;
  }

  .brand {
    margin-bottom: 32px;
  }

  .menu-list {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .menu-list li {
    margin: 0;
    padding: 0;
  }
  .menu-list li:last-child a {
    padding: 6px 10px;
  }
}

